[package]
name = "stardew_predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
phf = { version = "0.13", features = ["macros"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement"] }
yew = { version = "0.23", features = ["csr"] }

[build-dependencies]
phf = { version = "0.13" }
phf_codegen = "0.13"
serde_json = "1.0"
